--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 #wrapper {
   position: relative;
-  width: 100%;
+  width: 80%;
   max-width: 1078px;
   margin: 0 auto;
 }
@@ -22,7 +22,8 @@ canvas {
     width: 100% !important;
     height: auto;
     padding: 100px;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 h1.map-country-title_main {
@@ -33,8 +34,66 @@ h1.map-country-title_main {
     width: 100%;
     top: 65%;
     left: 50%;
-    transform-origin: 50%;
-    transform: translate(-50%, -50%);
+    -webkit-transform-origin: 50%;
+            transform-origin: 50%;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
     opacity: 0.7;
 }
 
+.map-scroll-hide {
+  overflow: hidden;
+  padding-right: 18px;
+  box-sizing: border-box;
+}
+
+ul.map-key-list {
+    position: absolute;
+    right: -5%;
+    top: 0;
+    word-wrap: break-word;
+    white-space: normal;
+    width: 80px;
+    font-size: 14px;
+    font-family: Helvetica, sans-serif;
+    font-weight: lighter;
+    list-style: none;
+    height: 100%;
+    overflow: auto;
+    padding-left: 0px !important;
+    padding-right: 36px;
+}
+
+li.map-key-list-item {
+    font-size: 12px;
+    line-height: 22px;
+    position: relative
+    ;
+}
+
+li.map-key-list-item:after {
+    content: "";
+    position: absolute;
+    right: -12px;
+    top: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: #ebaf06;
+    border-radius: 10px;
+    -webkit-transition: all .25s ease-in-out;
+    transition: all .25s ease-in-out;
+    -webkit-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    -webkit-transform-origin: 50%;
+            transform-origin: 50%;
+}
+
+li.map-key-list-item:hover:after {
+    background-color: #e91e63;
+    border-radius: 0px;
+}
+
+.active:after {
+  background-color: #e91e63;
+  border-radius: 0px;
+}
