Adds active status for items in the key during the opening cycle as well as when they are clicked and persist until another item is clicked

--- a/styles/main.css
+++ b/styles/main.css
@@ -93,7 +93,7 @@ li.map-key-list-item:hover:after {
     border-radius: 0px;
 }
 
-.active:after {
+li.map-key-list-item.active:after {
   background-color: #e91e63;
   border-radius: 0px;
 }
