--- a/styles/main.css
+++ b/styles/main.css
@@ -97,3 +97,11 @@ li.map-key-list-item.active:after {
   background-color: #e91e63;
   border-radius: 0px;
 }
+
+
+/* Temporary styles */
+
+.map-country-project-description,
+.map-country-course-boolean {
+  display: none;
+}
